compose: Allow 3-way compose box resizing with new fixed expanded state.
Apart from the normal (collapsed) and full screen sizes, a new expanded
state with the same size as the maximum a normal compose box can stretch
to when full (40% of the screen height) is now available. Now a user can
expand the compose box without it covering the full screen with a click.
The vertical resize icon in the bottom right corner of the compose box
is rendered useless so has been removed.

All three states can be cycled through by clicking the compose resize
button in the order: collapsed -> 40% of the screen -> full screen. When
a message naturally causes the compose box in its normal state to expand
up to 40% of the screen, clicking the resize button will take it to full
screen state.

Fixes: #29966.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -342,7 +342,8 @@
         }
     }
 
-    .collapse-composebox-button {
+    .collapse-composebox-button,
+    .maximize-composebox-button {
         display: none;
     }
 }
@@ -827,7 +828,7 @@ textarea.new_message_textarea {
     height: 1.5em;
     max-height: 22em;
     margin: 0;
-    resize: vertical !important;
+    resize: none !important;
     border-radius: 3px 3px 0 0;
     border: none;
     background-color: hsl(0deg 0% 100%);
@@ -1461,7 +1462,8 @@ textarea.new_message_textarea {
     }
 }
 
-#compose.compose-fullscreen {
+#compose.compose-fullscreen,
+#compose.compose-intermediate {
     z-index: 99;
 
     #compose-container {
@@ -1496,7 +1498,10 @@ textarea.new_message_textarea {
         height: 0;
         flex: 1;
     }
+}
 
+#compose.compose-fullscreen {
+    .maximize-composebox-button,
     .expand-composebox-button {
         display: none;
     }
@@ -1504,6 +1509,22 @@ textarea.new_message_textarea {
     .collapse-composebox-button {
         display: flex;
     }
+}
+
+#compose.compose-intermediate,
+#compose.automatically-expanded {
+    .collapse-composebox-button,
+    .expand-composebox-button {
+        display: none;
+    }
+
+    .maximize-composebox-button {
+        display: flex;
+    }
+}
+
+#compose.compose-intermediate {
+    height: var(--max-unmaximized-compose-height);
 }
 
 .preview_mode {
